fixed contrast for price counter

--- a/common.css
+++ b/common.css
@@ -210,7 +210,7 @@ html{
     .count {
         min-width: 40px;
         min-height: 40px;
-        background-color: #31B0D5;
+        background-color: #297287;
         border-radius: 50%;
         display: inline-block;
         position: fixed;
